--- a/W01D3/W01D3_APIs.ipynb
+++ b/W01D3/W01D3_APIs.ipynb
@@ -11,7 +11,7 @@
     "## Lighthouse Labs\n",
     "### W01D3 APIs\n",
     "Instructor: Socorro Dominguez  \n",
-    "January 06, 2021"
+    "March 03, 2021"
    ]
   },
   {
@@ -23,9 +23,6 @@
    },
    "source": [
     "**Agenda:**\n",
-    "\n",
-    "* Housekeeping Guidelines\n",
-    "* Introductions\n",
     "\n",
     "* APIs\n",
     "    * What is it?\n",
@@ -44,24 +41,24 @@
     }
    },
    "source": [
-    "## Housekeeping\n",
-    "\n",
-    "- Mics muted (to avoid background noises)\n",
-    "- Cameras on\n",
-    "- You can ask unmute yourself if you want to ask something.\n",
-    "- You can ask me questions.\n",
-    "- I can ask you questions too."
+    "Think about where we get our data from..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
-    "## Introductions"
+    "- Publicly available datasets (e.g. check out Kaggle)\n",
+    "    - Good for benchmarking, but limited for real use-case\n",
+    "- Company’s database (e.g. transaction history)\n",
+    "    - SQL, MongoDB, etc.\n",
+    "- From the web\n",
+    "    - Collected manually\n",
+    "    - Collected automatically (code)"
    ]
   },
   {
@@ -79,14 +76,22 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "Web Pages are intended for Humans. However, there’s lots of valuable data embedding in web pages:\n",
-    "* course listings\n",
-    "* bank records\n",
-    "* blogs"
+    "![img](api_img.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![img](xml_img.png)"
    ]
   },
   {
@@ -98,6 +103,24 @@
    },
    "source": [
     "### What if we wanted to collect this data for analysis?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "We would need to create a Data Mining program that goes to URLs and parses the HTML to extract data.\n",
+    "- Effortful\n",
+    "    - HTML is difficult to parse\n",
+    "    - Almost all information is irrelevant (e.g. UI-related)\n",
+    "    - Websites often require interaction (e.g. “Load More” button)\n",
+    "    - When websites update, your code will break\n",
+    "    - Every website is different\n",
+    "    - Companies try to stop data miners"
    ]
   },
   {
@@ -131,6 +154,24 @@
     "**C**haracteristics  \n",
     "\n",
     "We will revisit RESTful APIs in Week 7, so try to get just the main concepts today."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "- Programmer-friendly version of websites\n",
+    "- Go to a URL composed of\n",
+    "    - API root endpoint\n",
+    "    - API function\n",
+    "    - API key (like a login)\n",
+    "    - Parameter keys\n",
+    "    - Parameter values\n",
+    "    - Returns data (JSON, XML, csv, etc.)"
    ]
   },
   {
@@ -320,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -336,77 +377,78 @@
        "  'RouteMap': {'Href': 'https://nb.translink.ca/geodata/099.kmz'},\n",
        "  'Schedules': [{'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '6:49am',\n",
-       "    'ExpectedCountdown': 1,\n",
+       "    'ExpectedLeaveTime': '10:31pm 2021-02-27',\n",
+       "    'ExpectedCountdown': -2,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '07:08:03 am'},\n",
+       "    'LastUpdate': '11:08:03 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '6:54am',\n",
-       "    'ExpectedCountdown': 6,\n",
+       "    'ExpectedLeaveTime': '10:41pm 2021-02-27',\n",
+       "    'ExpectedCountdown': 8,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '07:08:03 am'},\n",
+       "    'LastUpdate': '11:08:03 pm'},\n",
+       "   {'Pattern': 'E8FL2',\n",
+       "    'Destination': 'TO BOUNDARY B-LINE',\n",
+       "    'ExpectedLeaveTime': '10:51pm 2021-02-27',\n",
+       "    'ExpectedCountdown': 18,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '11:08:03 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '6:57am',\n",
-       "    'ExpectedCountdown': 9,\n",
+       "    'ExpectedLeaveTime': '11:01pm 2021-02-27',\n",
+       "    'ExpectedCountdown': 28,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '07:08:03 am'},\n",
+       "    'LastUpdate': '11:08:03 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:03am',\n",
-       "    'ExpectedCountdown': 15,\n",
+       "    'ExpectedLeaveTime': '11:11pm 2021-02-27',\n",
+       "    'ExpectedCountdown': 38,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '07:08:03 am'},\n",
+       "    'LastUpdate': '12:08:02 am'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:07am',\n",
-       "    'ExpectedCountdown': 19,\n",
+       "    'ExpectedLeaveTime': '11:21pm 2021-02-27',\n",
+       "    'ExpectedCountdown': 48,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '07:08:03 am'},\n",
-       "   {'Pattern': 'E1',\n",
-       "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '7:11am',\n",
-       "    'ExpectedCountdown': 23,\n",
-       "    'ScheduleStatus': '*',\n",
-       "    'CancelledTrip': False,\n",
-       "    'CancelledStop': False,\n",
-       "    'AddedTrip': False,\n",
-       "    'AddedStop': False,\n",
-       "    'LastUpdate': '08:08:13 am'}]}]"
+       "    'LastUpdate': '12:08:02 am'}]}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import requests\n",
+    "import config as cfg\n",
     "\n",
     "# Get your own API token from developer.translink.ca\n",
     "\n",
-    "apikey = ''; # This is bad practice but good for you to visualize. \n",
+    "apikey = cfg.translink['key']\n",
     "#In the Walkthrough, you will learn how to hide your API keys using Environmental Variables.\n",
     "\n",
     "requests.get('http://api.translink.ca/rttiapi/v1/stops/61935/estimates?apikey={}'.format(apikey),headers={'accept': 'application/JSON'}).json()"
@@ -428,12 +470,12 @@
         "AtStreet": "98 AVE",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 308,
+        "Distance": 307,
         "Latitude": 49.1796,
-        "Longitude": -122.84581,
+        "Longitude": -122.845818,
         "Name": "SB KING GEORGE BLVD FS 98 AVE",
         "OnStreet": "KING GEORGE BLVD",
-        "Routes": "314, 321, 329",
+        "Routes": "314, 321",
         "StopNo": 54997,
         "WheelchairAccess": 1
        },
@@ -442,11 +484,11 @@
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 339,
-        "Latitude": 49.17699,
-        "Longitude": -122.8507,
+        "Latitude": 49.176991,
+        "Longitude": -122.850708,
         "Name": "EB 96 AVE FS 134 ST",
         "OnStreet": "96 AVE",
-        "Routes": "314, 329",
+        "Routes": "314",
         "StopNo": 54986,
         "WheelchairAccess": 0
        },
@@ -454,12 +496,12 @@
         "AtStreet": "134 ST",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 343,
-        "Latitude": 49.17715,
-        "Longitude": -122.85179,
+        "Distance": 342,
+        "Latitude": 49.177158,
+        "Longitude": -122.851791,
         "Name": "WB 96 AVE FS 134 ST",
         "OnStreet": "96 AVE",
-        "Routes": "314, 329",
+        "Routes": "314",
         "StopNo": 54999,
         "WheelchairAccess": 0
        },
@@ -480,12 +522,12 @@
         "AtStreet": "KING GEORGE BLVD",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 387,
-        "Latitude": 49.17713,
+        "Distance": 386,
+        "Latitude": 49.177135,
         "Longitude": -122.847,
         "Name": "WB 96 AVE FS KING GEORGE BLVD",
         "OnStreet": "96 AVE",
-        "Routes": "314, 329",
+        "Routes": "314",
         "StopNo": 54998,
         "WheelchairAccess": 1
        },
@@ -495,10 +537,10 @@
         "City": "SURREY",
         "Distance": 425,
         "Latitude": 49.17762,
-        "Longitude": -122.84542,
+        "Longitude": -122.845421,
         "Name": "NB KING GEORGE BLVD FS 96 AVE",
         "OnStreet": "KING GEORGE BLVD",
-        "Routes": "314, 321, 326, 329, 394, R1",
+        "Routes": "314, 321, 326, R1",
         "StopNo": 54988,
         "WheelchairAccess": 1
        },
@@ -507,11 +549,11 @@
         "BayNo": "4",
         "City": "SURREY",
         "Distance": 460,
-        "Latitude": 49.18268,
-        "Longitude": -122.84518,
+        "Latitude": 49.182682,
+        "Longitude": -122.845184,
         "Name": "KING GEORGE STN BAY 4",
         "OnStreet": "KING GEORGE STN",
-        "Routes": "314, 321, 326, 329, 395, 502, 503, R1",
+        "Routes": "314, 321, 326, 502, 503, R1",
         "StopNo": 59339,
         "WheelchairAccess": 1
        },
@@ -520,11 +562,11 @@
         "BayNo": "1",
         "City": "SURREY",
         "Distance": 474,
-        "Latitude": 49.1832,
-        "Longitude": -122.8457,
+        "Latitude": 49.183201,
+        "Longitude": -122.845703,
         "Name": "KING GEORGE STN BAY 1     ",
         "OnStreet": "KING GEORGE STN",
-        "Routes": "314, 321, 326, 329, R1",
+        "Routes": "314, 321, 326, R1",
         "StopNo": 54996,
         "WheelchairAccess": 1
        },
@@ -533,8 +575,8 @@
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 490,
-        "Latitude": 49.18275,
-        "Longitude": -122.84474,
+        "Latitude": 49.182755,
+        "Longitude": -122.844742,
         "Name": "KING GEORGE STATION PLATFORM 2",
         "OnStreet": "KING GEORGE STATION",
         "Routes": "992",
@@ -546,8 +588,8 @@
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 491,
-        "Latitude": 49.18107,
-        "Longitude": -122.85655,
+        "Latitude": 49.181076,
+        "Longitude": -122.856552,
         "Name": "NB 132 ST NS 98 AVE",
         "OnStreet": "132 ST",
         "Routes": "324",
@@ -555,12 +597,25 @@
         "WheelchairAccess": 1
        },
        {
+        "AtStreet": "BAY 2",
+        "BayNo": "2",
+        "City": "SURREY",
+        "Distance": 496,
+        "Latitude": 49.183125,
+        "Longitude": -122.845139,
+        "Name": "KING GEORGE STN BAY 2",
+        "OnStreet": "KING GEORGE STN",
+        "Routes": "",
+        "StopNo": 54990,
+        "WheelchairAccess": 1
+       },
+       {
         "AtStreet": "98 AVE",
         "BayNo": "N",
         "City": "SURREY",
-        "Distance": 496,
-        "Latitude": 49.1804,
-        "Longitude": -122.8568,
+        "Distance": 497,
+        "Latitude": 49.180401,
+        "Longitude": -122.856804,
         "Name": "SB 132 ST FS 98 AVE",
         "OnStreet": "132 ST",
         "Routes": "324",
@@ -568,25 +623,12 @@
         "WheelchairAccess": 0
        },
        {
-        "AtStreet": "BAY 2",
-        "BayNo": "2",
-        "City": "SURREY",
-        "Distance": 496,
-        "Latitude": 49.18312,
-        "Longitude": -122.84513,
-        "Name": "KING GEORGE STN BAY 2",
-        "OnStreet": "KING GEORGE STN",
-        "Routes": "345, 394",
-        "StopNo": 54990,
-        "WheelchairAccess": 1
-       },
-       {
         "AtStreet": "PLATFORM 1",
         "BayNo": "N",
         "City": "SURREY",
         "Distance": 497,
-        "Latitude": 49.18281,
-        "Longitude": -122.84469,
+        "Latitude": 49.182812,
+        "Longitude": -122.844688,
         "Name": "KING GEORGE STATION PLATFORM 1",
         "OnStreet": "KING GEORGE STATION",
         "Routes": "992",
@@ -617,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -630,7 +672,7 @@
        "'SB KING GEORGE BLVD FS 98 AVE'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -654,7 +696,7 @@
        "{'login': 'sedv8808',\n",
        " 'id': 42593920,\n",
        " 'node_id': 'MDQ6VXNlcjQyNTkzOTIw',\n",
-       " 'avatar_url': 'https://avatars2.githubusercontent.com/u/42593920?v=4',\n",
+       " 'avatar_url': 'https://avatars.githubusercontent.com/u/42593920?v=4',\n",
        " 'gravatar_id': '',\n",
        " 'url': 'https://api.github.com/users/sedv8808',\n",
        " 'html_url': 'https://github.com/sedv8808',\n",
@@ -679,13 +721,13 @@
        " 'twitter_username': None,\n",
        " 'public_repos': 21,\n",
        " 'public_gists': 0,\n",
-       " 'followers': 0,\n",
+       " 'followers': 5,\n",
        " 'following': 1,\n",
        " 'created_at': '2018-08-22T01:19:27Z',\n",
-       " 'updated_at': '2021-01-06T03:33:52Z'}"
+       " 'updated_at': '2021-02-28T06:00:33Z'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,6 +766,15 @@
     "```\n",
     "https://api.github.com/users/sedv8808\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !curl https://api.github.com/users/sedv8808"
    ]
   },
   {
