--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1035,148 +1035,26 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>person 1</td>\n",
-       "      <td>bar 9</td>\n",
-       "      <td>cocktail</td>\n",
-       "      <td>26.487211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>person 1</td>\n",
-       "      <td>bar 9</td>\n",
-       "      <td>vodka</td>\n",
-       "      <td>99.061460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>person 1</td>\n",
-       "      <td>bar 19</td>\n",
-       "      <td>cocktail</td>\n",
-       "      <td>11.775652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>person 1</td>\n",
-       "      <td>bar 19</td>\n",
-       "      <td>rum</td>\n",
-       "      <td>18.195812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>person 1</td>\n",
-       "      <td>bar 19</td>\n",
-       "      <td>whisky</td>\n",
-       "      <td>34.507183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1605</th>\n",
-       "      <td>person 100</td>\n",
-       "      <td>bar 2</td>\n",
-       "      <td>cocktail</td>\n",
-       "      <td>18.345350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1606</th>\n",
-       "      <td>person 100</td>\n",
-       "      <td>bar 2</td>\n",
-       "      <td>beer</td>\n",
-       "      <td>7.545805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1607</th>\n",
-       "      <td>person 100</td>\n",
-       "      <td>bar 2</td>\n",
-       "      <td>rum</td>\n",
-       "      <td>6.449759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1608</th>\n",
-       "      <td>person 100</td>\n",
-       "      <td>bar 15</td>\n",
-       "      <td>wine</td>\n",
-       "      <td>144.248120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1609</th>\n",
-       "      <td>person 100</td>\n",
-       "      <td>bar 15</td>\n",
-       "      <td>cocktail</td>\n",
-       "      <td>25.871601</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1610 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               0       1         2           3\n",
-       "0       person 1   bar 9  cocktail   26.487211\n",
-       "1       person 1   bar 9     vodka   99.061460\n",
-       "2       person 1  bar 19  cocktail   11.775652\n",
-       "3       person 1  bar 19       rum   18.195812\n",
-       "4       person 1  bar 19    whisky   34.507183\n",
-       "...          ...     ...       ...         ...\n",
-       "1605  person 100   bar 2  cocktail   18.345350\n",
-       "1606  person 100   bar 2      beer    7.545805\n",
-       "1607  person 100   bar 2       rum    6.449759\n",
-       "1608  person 100  bar 15      wine  144.248120\n",
-       "1609  person 100  bar 15  cocktail   25.871601\n",
-       "\n",
-       "[1610 rows x 4 columns]"
+       "'\\nquery.execute(\\n\"\"\"\\n\\n\"\"\")\\n\\nresponse = query.fetchall()\\n\\npd.DataFrame(response)\\n'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "query.execute(\n",
     "\"\"\"\n",
-    "SELECT o.person, o.bar, d.type, h.price\n",
-    "    FROM orders o\n",
-    "    JOIN has_on_menu h ON (o.drink_id = h.drink_id AND o.bar = h.bar) \n",
-    "    JOIN drink_info d ON o.drink_id = d.drink_id;\n",
+    "\n",
     "\"\"\")\n",
     "\n",
     "response = query.fetchall()\n",
     "\n",
-    "pd.DataFrame(response)"
+    "pd.DataFrame(response)\n",
+    "'''"
    ]
   },
   {
@@ -1192,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
