--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -357,7 +357,7 @@
     }
    },
    "source": [
-    "## Demo\n",
+    "## Demo & Tutorial\n",
     "* Show you how to query data from a database\n",
     "* Statements that start with `SELECT`"
    ]
@@ -387,18 +387,49 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Things we will be doing:\n",
+    "- Creating a PostgreSQL database using the psql shell tool.\n",
+    "- Importing existing data to fill the database (the drinks.sql file in this repository)\n",
+    "- Using the psycopg2 Python package to interact with the database (we could have alternatively used a dedicated SQL IDE like SQL Workbench, PgAdmin)\n",
+    "- Quering the database to explore SQL concepts such as:\n",
+    "    - Filtering, ordering, limiting, etc.\n",
+    "    - Joining tables\n",
+    "    - Grouping records\n",
+    "    - Aggregate functions\n",
+    "\n",
+    "#### Requirements:\n",
+    "- Install PostgreSQL (and potentially give the postgres user a password)\n",
+    "- Install the psycopg2 Python package in your anaconda virtual environment of choice. Note: you will need to install other dependencies beforehand. Look up which ones for your operating system.\n",
+    "    - Using conda: conda install -c anaconda psycopg2\n",
+    "    - Using pip: pip install psycopg2\n",
+    "\n",
+    "\n",
+    "#### Creating the database using psql\n",
+    "- Start up your terminal.\n",
+    "- Start the psql shell tool. \\ psql\n",
+    "- List the PostgreSQL databases that exist on your computer (press \"q\" when you want to exit the list view). \\ \\l\n",
+    "- Create a new empty database called \"drinks\". \\ CREATE DATABASE drinks;\n",
+    "- Confirm that the \"drinks\" database was created (press \"q\" when you want to exit the list view). \\ \\l\n",
+    "- We can now leave the psql tool. \\ exit\n",
+    "- And also log out of the \"postgres\" user. \\ exit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## Setting up the connection to our database"
+    "## Setting up the connection to our database via Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -410,12 +441,12 @@
     "import psycopg2\n",
     "import pandas as pd\n",
     "\n",
-    "postgres_pwd = 'postgres'"
+    "postgres_pwd = cfg.postgres['password']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -476,6 +507,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('person 1', '2016-10-16', 'bar 9', 'drink 4', 1),\n",
+       " ('person 1', '2016-10-16', 'bar 9', 'drink 44', 1),\n",
+       " ('person 1', '2016-10-22', 'bar 19', 'drink 1', 4),\n",
+       " ('person 1', '2016-10-22', 'bar 19', 'drink 9', 1),\n",
+       " ('person 1', '2016-10-22', 'bar 19', 'drink 42', 2)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# raw response\n",
+    "response"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -499,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -589,13 +645,127 @@
        "4  person 1  2016-10-22  bar 19  drink 42    2"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.DataFrame(response, columns = ['person', 'date', 'bar', 'drink_id', 'qty']) #You will learn this tomorrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person</th>\n",
+       "      <th>date</th>\n",
+       "      <th>bar</th>\n",
+       "      <th>drink_id</th>\n",
+       "      <th>quantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>person 1</td>\n",
+       "      <td>2016-10-16</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>person 1</td>\n",
+       "      <td>2016-10-16</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 44</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>person 1</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>bar 19</td>\n",
+       "      <td>drink 1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>person 1</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>bar 19</td>\n",
+       "      <td>drink 9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>person 1</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>bar 19</td>\n",
+       "      <td>drink 42</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     person        date     bar  drink_id  quantity\n",
+       "0  person 1  2016-10-16   bar 9   drink 4         1\n",
+       "1  person 1  2016-10-16   bar 9  drink 44         1\n",
+       "2  person 1  2016-10-22  bar 19   drink 1         4\n",
+       "3  person 1  2016-10-22  bar 19   drink 9         1\n",
+       "4  person 1  2016-10-22  bar 19  drink 42         2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Before doing anything else, let's create a function out\n",
+    "# of the things we're doing above\n",
+    "def execute_query(query_string, return_pandas=True):\n",
+    "    if return_pandas:\n",
+    "        response = pd.read_sql_query(query_string, con)\n",
+    "    else:\n",
+    "        cur.execute(query_string)\n",
+    "        response = cur.fetchall()\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "# Let's try out our function to make sure it does\n",
+    "# the same as what we have above\n",
+    "query = \"\"\"\n",
+    "SELECT *\n",
+    "FROM orders\n",
+    "LIMIT 5;\n",
+    "\"\"\"\n",
+    "execute_query(query)"
    ]
   },
   {
@@ -626,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +824,7 @@
        "      <th>date</th>\n",
        "      <th>bar</th>\n",
        "      <th>drink_id</th>\n",
-       "      <th>qty</th>\n",
+       "      <th>quantity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -682,33 +852,105 @@
        "      <td>drink 4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>person 8</td>\n",
+       "      <td>2016-10-10</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 44</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>person 8</td>\n",
+       "      <td>2016-10-10</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 34</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>person 92</td>\n",
+       "      <td>2016-10-24</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>person 92</td>\n",
+       "      <td>2016-10-24</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 34</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>person 94</td>\n",
+       "      <td>2016-10-06</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>person 94</td>\n",
+       "      <td>2016-10-06</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 44</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>person 94</td>\n",
+       "      <td>2016-10-06</td>\n",
+       "      <td>bar 9</td>\n",
+       "      <td>drink 34</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>64 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     person        date    bar  drink_id  qty\n",
-       "0  person 1  2016-10-16  bar 9   drink 4    1\n",
-       "1  person 1  2016-10-16  bar 9  drink 44    1\n",
-       "2  person 8  2016-10-10  bar 9   drink 4    1"
+       "       person        date    bar  drink_id  quantity\n",
+       "0    person 1  2016-10-16  bar 9   drink 4         1\n",
+       "1    person 1  2016-10-16  bar 9  drink 44         1\n",
+       "2    person 8  2016-10-10  bar 9   drink 4         1\n",
+       "3    person 8  2016-10-10  bar 9  drink 44         1\n",
+       "4    person 8  2016-10-10  bar 9  drink 34         1\n",
+       "..        ...         ...    ...       ...       ...\n",
+       "59  person 92  2016-10-24  bar 9   drink 4         1\n",
+       "60  person 92  2016-10-24  bar 9  drink 34         1\n",
+       "61  person 94  2016-10-06  bar 9   drink 4         5\n",
+       "62  person 94  2016-10-06  bar 9  drink 44         4\n",
+       "63  person 94  2016-10-06  bar 9  drink 34         4\n",
+       "\n",
+       "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query.execute(\n",
-    "\"\"\"\n",
+    "query2 = \"\"\"\n",
     "SELECT *\n",
     "FROM orders\n",
     "WHERE bar = 'bar 9';\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
     "\n",
-    "response2 = query.fetchall()\n",
-    "\n",
-    "pd.DataFrame(response2, columns = ['person', 'date', 'bar', 'drink_id', 'qty']).head(3)"
+    "execute_query(query2)"
    ]
   },
   {
@@ -766,57 +1008,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
-    "#query.execute(\n",
-    "#\"\"\"\n",
+    "'''\n",
+    "query= \"\"\"\n",
+    "\"\"\"\n",
     "\n",
-    "#\"\"\")\n",
-    "\n",
-    "#response = query.fetchall()\n",
-    "#pd.DataFrame(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# \n",
-    "#query.execute(\n",
-    "#\"\"\"\n",
-    "\n",
-    "#\"\"\")\n",
-    "\n",
-    "#response = query.fetchall()\n",
-    "#pd.DataFrame(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#colnames = [desc[0] for desc in query.description]\n",
-    "#print(colnames)"
+    "pd.DataFrame(query)\n",
+    "'''"
    ]
   },
   {
@@ -840,35 +1041,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nquery.execute(\\n\"\"\"\\n\\n\"\"\")\\n\\nresponse = query.fetchall()\\n\\npd.DataFrame(response)\\n'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
-    "query.execute(\n",
+    "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "\"\"\")\n",
-    "\n",
-    "response = query.fetchall()\n",
-    "\n",
-    "pd.DataFrame(response)\n",
+    "pd.DataFrame(query)\n",
     "'''"
    ]
   },
@@ -891,34 +1077,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nquery.execute(\\n\"\"\"\\n\\n\"\"\")\\n\\nresponse = query.fetchall()\\n\\npd.DataFrame(response)\\n'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
-    "query.execute(\n",
+    "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "\"\"\")\n",
-    "\n",
-    "response = query.fetchall()\n",
-    "\n",
-    "pd.DataFrame(response)\n",
+    "pd.DataFrame(query)\n",
     "'''"
    ]
   },
@@ -945,64 +1116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nquery.execute(\\n\"\"\"\\n\\n\"\"\")\\n\\nresponse = query.fetchall()\\n\\npd.DataFrame(response)\\n'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
-    "query.execute(\n",
+    "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "\"\"\")\n",
-    "\n",
-    "response = query.fetchall()\n",
-    "\n",
-    "pd.DataFrame(response)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nquery.execute(\\n\"\"\"\\n\\n\"\"\")\\n\\nresponse = query.fetchall()\\n\\npd.DataFrame(response)\\n'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "query.execute(\n",
-    "\"\"\"\n",
-    "\n",
-    "\"\"\")\n",
-    "\n",
-    "response = query.fetchall()\n",
-    "\n",
-    "pd.DataFrame(response)\n",
+    "pd.DataFrame(query)\n",
     "'''"
    ]
   },
@@ -1026,34 +1148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nquery.execute(\\n\"\"\"\\n\\n\"\"\")\\n\\nresponse = query.fetchall()\\n\\npd.DataFrame(response)\\n'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
-    "query.execute(\n",
+    "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "\"\"\")\n",
-    "\n",
-    "response = query.fetchall()\n",
-    "\n",
-    "pd.DataFrame(response)\n",
+    "pd.DataFrame(query)\n",
     "'''"
    ]
   },
@@ -1070,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
