--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -41,6 +41,19 @@
     }
    },
    "source": [
+    "Download Notebook using: https://downgit.github.io/#/home\n",
+    "\n",
+    "Link to download: https://github.com/sedv8808/LighthouseLabs/tree/main/W02D1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Why databases?\n",
     "\n",
     "* Organized way to store data and relate data to each other.\n",
