--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -1029,7 +1029,7 @@
     "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "pd.DataFrame(query)\n",
+    "execute_query(query)\n",
     "'''"
    ]
   },
@@ -1067,7 +1067,7 @@
     "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "pd.DataFrame(query)\n",
+    "execute_query(query)\n",
     "'''"
    ]
   },
@@ -1102,7 +1102,7 @@
     "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "pd.DataFrame(query)\n",
+    "execute_query(query)\n",
     "'''"
    ]
   },
@@ -1137,7 +1137,7 @@
     "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "pd.DataFrame(query)\n",
+    "execute_query(query)\n",
     "'''"
    ]
   },
@@ -1173,7 +1173,7 @@
     "query= \"\"\"\n",
     "\"\"\"\n",
     "\n",
-    "pd.DataFrame(query)\n",
+    "execute_query(query)\n",
     "'''"
    ]
   },
